name:                odpi-simple
version:             0.1.0.0
synopsis:            Mid-level ODPI-C wrapper
description:         Convenience wrappers and utility functions around odpi-libdpi.
license:             BSD3
license-file:        LICENSE
author:              Maciej Kazulak
maintainer:          kazulakm@gmail.com
-- copyright:           
category:            Database
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  exposed-modules:
      Database.Odpi     
    , Database.Odpi.Context
    , Database.Odpi.Connection
    , Database.Odpi.Data
    , Database.Odpi.FromField
    , Database.Odpi.FromRow
    , Database.Odpi.NativeValue
    , Database.Odpi.Pool
    , Database.Odpi.Statement
    , Database.Odpi.Types
    , Database.Odpi.Util
  build-depends:
      base >=4.10 && <4.11
    , bytestring
    , hashable
    , odpi-libdpi
    , text
    , time
    , scientific
